<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/avenir_nextlt_pro_bold"
            android:text="@string/order_sent_1"
            android:textColor="@color/text_gray"
            android:textSize="20sp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/avenir_nextlt_pro_regular"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/order_sent_2"
            android:textColor="@color/gray_line"
            android:textSize="24sp">

        </TextView>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/ic_paper_plane">

        </ImageView>

        <LinearLayout
            android:id="@+id/text_for_history"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_nextlt_pro_bold"
                android:text="@string/order_sent_3"
                android:textColor="@color/text_red"
                android:textSize="15sp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/text_for_history2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_nextlt_pro_bold"
                android:text="@string/order_sent_4"
                android:textColor="@color/text_red"
                android:textSize="15sp"></TextView>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>