<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.ChangePasswordActivity">

    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/avenir_nextlt_pro_bold"
        android:text="@string/change_password"
        android:textColor="@color/header_text_color"
        android:textSize="18sp">

    </TextView>


    <RelativeLayout
        android:id="@+id/re_login_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerText"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:visibility="visible">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mar_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:cardCornerRadius="24dp"
            app:cardElevation="8dp">

            <EditText
                android:id="@+id/edt_current"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:fontFamily="@font/avenir_nextlt_pro_it"
                android:hint="@string/current_passord"
                android:imeOptions="actionNext"
                android:paddingLeft="25dp"
                android:textSize="18sp">

            </EditText>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mar_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mar_current"
            android:layout_margin="10dp"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:cardCornerRadius="24dp"
            app:cardElevation="8dp">

            <EditText
                android:id="@+id/edt_fp_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:fontFamily="@font/avenir_nextlt_pro_it"
                android:hint="@string/fp_password"
                android:imeOptions="actionNext"
                android:paddingLeft="25dp"
                android:textSize="18sp">

            </EditText>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mar_name"
            android:layout_margin="10dp"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:cardCornerRadius="24dp"
            app:cardElevation="8dp">

            <EditText
                android:id="@+id/edt_fp_confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:fontFamily="@font/avenir_nextlt_pro_it"
                android:hint="@string/fp_confirmpassword"
                android:imeOptions="actionDone"
                android:paddingLeft="25dp"
                android:textSize="18sp">

            </EditText>
        </com.google.android.material.card.MaterialCardView>


    </RelativeLayout>

    <io.writeopia.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/fp_btnconfirm_anmiation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/re_login_edt"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/rounded_corner_login"
        android:text="@string/fp_btn"
        app:spinning_bar_color="#FFF"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_width="4dp" />


</RelativeLayout>