<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#DFE0E0"
    tools:context=".activity.MyAccountActivity">

    <RelativeLayout
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_nextlt_pro_bold"
            android:text="@string/my_sells_activites"
            android:textColor="@color/teal_200"
            android:textSize="18sp"></TextView>


        <ImageView
            android:layout_centerVertical="true"
            android:src="@drawable/notificarion_icon"
            android:layout_width="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/image_my_account"
            android:layout_height="wrap_content"></ImageView>


        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/image_my_account"
            android:layout_alignParentRight="true"
            android:src="@drawable/my_account_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></ImageView>

    </RelativeLayout>

    <LinearLayout

        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/solid_this_campaign"
                android:layout_width="10dp"
                android:layout_height="10dp">
            </ImageView>
            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_nextlt_pro_regular"
                android:text="@string/this_campaign"
                android:textColor="@color/black"
                android:textSize="14sp"></TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/solid_quarter"
                android:layout_width="10dp"
                android:layout_height="10dp">
            </ImageView>
            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_nextlt_pro_regular"
                android:text="@string/quarter"
                android:textColor="@color/black"
                android:textSize="14sp"></TextView>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout

        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/solid_current_year"
                android:layout_width="10dp"
                android:layout_height="10dp">
            </ImageView>
            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_nextlt_pro_regular"
                android:text="@string/current_year"
                android:textColor="@color/black"
                android:textSize="14sp"></TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/solid_previous_year"
                android:layout_width="10dp"
                android:layout_height="10dp">
            </ImageView>
            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_nextlt_pro_regular"
                android:text="@string/previous_year"
                android:textColor="@color/black"
                android:textSize="14sp"></TextView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:background="@drawable/rounded_corner_pix"
                android:orientation="horizontal"
                android:layout_width="160dp"
                android:layout_height="40dp">

                <TextView
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_nextlt_pro_regular"
                    android:text="@string/incentive"
                    android:textColor="@color/black"
                    android:textSize="18sp"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:background="@drawable/rounded_corner_pix"
                android:orientation="horizontal"
                android:layout_width="160dp"
                android:layout_height="40dp">

                <TextView
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_nextlt_pro_regular"
                    android:text="@string/sells_details"
                    android:textColor="@color/black"
                    android:textSize="18sp"></TextView>

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/color_gray_border">

        </View>

        <TextView
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/avenir_nextlt_pro_regular"
            android:text="@string/my_sels"
            android:textColor="@color/teal_700"
            android:textSize="16sp"></TextView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>

    </LinearLayout>






</LinearLayout>