<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/due_action"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/avenir_nextlt_pro_regular"
        android:text="Aujourd'hui"
        android:textColor="@color/text_gray"
        android:textSize="15dp">

    </TextView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/text_pink">

    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/txt_lefthead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:fontFamily="@font/avenir_nextlt_pro_bold"
            android:text="@string/qty"
            android:textColor="@color/text_pink"
            android:textSize="15dp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_toLeftOf="@+id/txt_righthead"
            android:layout_toRightOf="@+id/txt_lefthead"
            android:fontFamily="@font/avenir_nextlt_pro_bold"
            android:text="@string/Description"
            android:textColor="@color/text_pink"
            android:textSize="15dp"></TextView>

        <TextView
            android:id="@+id/txt_righthead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/avenir_nextlt_pro_bold"
            android:text="@string/PRIX"
            android:textColor="@color/text_pink"
            android:textSize="15dp">

        </TextView>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_add_order_hisoty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>


</LinearLayout>
