<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/due_action"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/orderqty"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:fontFamily="@font/avenir_nextlt_pro_bold"
            android:gravity="center_horizontal"
            android:text="@string/qty"
            android:textColor="@color/text_gray"
            android:textSize="14sp">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/bill_productprice"
            android:layout_toRightOf="@+id/orderqty"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_bill_productname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_nextlt_pro_bold"
                android:text="@string/Description"
                android:textColor="@color/text_gray"
                android:textSize="14sp"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center|left"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bill_product_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/avenir_nextlt_pro_regular"
                    android:text=""
                    android:textColor="@color/text_gray"
                    android:textSize="15sp">

                </TextView>


            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/bill_productprice"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/avenir_nextlt_pro_bold"
            android:gravity="right"
            android:text="@string/PRIX"
            android:textColor="@color/text_gray"
            android:textSize="14sp">

        </TextView>

    </RelativeLayout>


</LinearLayout>
